--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,10 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.7", features = ["derive", "debug"] }
+libp2p = { version = "0.53.1", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
 rdev = "0.5.3"
-tokio = "1.33.0"
+tokio = { version = "1.34", features = ["full"] }
+async-trait = "0.1"
+futures = "0.3.29"
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
