--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-std = { version = "1.12", features = ["attributes"] }
+async-trait = "0.1"
 clap = { version = "4.4.7", features = ["derive", "debug"] }
-libp2p = { version = "0.53.1", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
+futures = "0.3.29"
+libp2p = { version = "0.53.1", features = [ "async-std", "dns", "gossipsub", "identify", "macros", "mdns", "noise", "ping", "quic", "relay", "rendezvous", "tcp", "tokio", "tokio", "yamux"] }
 rdev = "0.5.3"
 tokio = { version = "1.34", features = ["full"] }
-async-trait = "0.1"
-futures = "0.3.29"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
