--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ clap = { version = "4.4.7", features = ["derive", "debug"] }
 futures = "0.3.29"
 libp2p = { version = "0.53.1", features = [ "async-std", "dns", "gossipsub", "identify", "macros", "mdns", "noise", "ping", "quic", "relay", "rendezvous", "tcp", "tokio", "tokio", "yamux"] }
 rdev = "0.5.3"
+sqlite = { version = "0.32.0", features = ["bundled"] }
 tokio = { version = "1.34", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
